# nBody

./: .gitignore  AutoRun.py  CMakeLists.txt  Verslag_openCl.tex  results.csv
opgave/: .gitignore
opgave/n-body_deploy/: camera.cpp  camera.h  n-body  n-body.c  n-body.frag  n-body.vert  renderer.c  renderer.h
src/: auto_main.c  kernel.cl  main.c
src/lib/: renderer.c  renderer.h  text.c  text.h
